--- a/angular-crud/angular.json
+++ b/angular-crud/angular.json
@@ -8,7 +8,7 @@
       "schematics": {
         "@schematics/angular:component": {
           "style": "scss",
-          "inlineStyle": true,
+          "inlineStyle": false,
           "standalone": true,
           "skipTests": true
         },
