Refatorando carregamento de curso ao editar. Adicionando guarda de rotas resolver para carregar curso ao editar.

--- a/angular-crud/angular.json
+++ b/angular-crud/angular.json
@@ -20,6 +20,9 @@
           "standalone": true,
           "skipTests": true
         },
+        "@schematics/angular:guard": {
+          "skipTests": true
+        },
         "@schematics/angular:class": {
           "skipTests": true
         },
